버텍스 쉐이더
- .hlsl 을 사용하지 않는 이유는, vertex_ pixel_ .hlsl을 하나의 쉐이더에 짝을 맞게 만들어줘야함
- 그래서 .fx 확장자를 사용한다. (하나의 파일에 vertex shader / pixel shader를 구현하기 위함

--- a/Project/Engine/Engine.vcxproj.filters
+++ b/Project/Engine/Engine.vcxproj.filters
@@ -20,6 +20,12 @@
     <Filter Include="Module">
       <UniqueIdentifier>{6e7cd1e6-288a-437e-ae74-fac509c6c0f1}</UniqueIdentifier>
     </Filter>
+    <Filter Include="HLSL">
+      <UniqueIdentifier>{7d745bc7-29de-4c08-a627-9f3962ca790d}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="HLSL\2D">
+      <UniqueIdentifier>{86780a16-636b-4c02-9416-99480ca7a38a}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="framework.h">
@@ -63,5 +69,10 @@
     <None Include="SimpleMath.inl">
       <Filter>Module</Filter>
     </None>
+  </ItemGroup>
+  <ItemGroup>
+    <FxCompile Include="std2d.fx">
+      <Filter>HLSL\2D</Filter>
+    </FxCompile>
   </ItemGroup>
 </Project>
