--- a/Project/Engine/Engine.vcxproj
+++ b/Project/Engine/Engine.vcxproj
@@ -154,6 +154,7 @@ call Copy.bat
   <ItemGroup>
     <ClInclude Include="CAsset.h" />
     <ClInclude Include="CComponent.h" />
+    <ClInclude Include="CConstBuffer.h" />
     <ClInclude Include="CDevice.h" />
     <ClInclude Include="CEngine.h" />
     <ClInclude Include="CEntity.h" />
@@ -165,6 +166,7 @@ call Copy.bat
     <ClInclude Include="define.h" />
     <ClInclude Include="enum.h" />
     <ClInclude Include="framework.h" />
+    <ClInclude Include="func.h" />
     <ClInclude Include="global.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="SimpleMath.h" />
@@ -175,6 +177,7 @@ call Copy.bat
   <ItemGroup>
     <ClCompile Include="CAsset.cpp" />
     <ClCompile Include="CComponent.cpp" />
+    <ClCompile Include="CConstBuffer.cpp" />
     <ClCompile Include="CDevice.cpp" />
     <ClCompile Include="CEngine.cpp" />
     <ClCompile Include="CEntity.cpp" />
