--- a/Project/Engine/Engine.vcxproj.filters
+++ b/Project/Engine/Engine.vcxproj.filters
@@ -71,6 +71,12 @@
     <Filter Include="03. Device\ConstantBuffer">
       <UniqueIdentifier>{a646a808-c893-4dcb-8371-75c4361c6853}</UniqueIdentifier>
     </Filter>
+    <Filter Include="07. Asset\Shader\GraphicShader">
+      <UniqueIdentifier>{7f579471-cf5a-4a49-9604-7752edcd6bff}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="07. Asset\Shader\ComputeShader">
+      <UniqueIdentifier>{a10fc5ad-fc5c-4f69-a3c4-edad1ad0f5fc}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="framework.h">
@@ -134,6 +140,15 @@
     <ClInclude Include="func.h">
       <Filter>01. Header</Filter>
     </ClInclude>
+    <ClInclude Include="CShader.h">
+      <Filter>07. Asset\Shader</Filter>
+    </ClInclude>
+    <ClInclude Include="CGraphicShader.h">
+      <Filter>07. Asset\Shader\GraphicShader</Filter>
+    </ClInclude>
+    <ClInclude Include="CComputeShader.h">
+      <Filter>07. Asset\Shader\ComputeShader</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Engine.cpp">
@@ -175,6 +190,15 @@
     </ClCompile>
     <ClCompile Include="CConstBuffer.cpp">
       <Filter>03. Device\ConstantBuffer</Filter>
+    </ClCompile>
+    <ClCompile Include="CShader.cpp">
+      <Filter>07. Asset\Shader</Filter>
+    </ClCompile>
+    <ClCompile Include="CGraphicShader.cpp">
+      <Filter>07. Asset\Shader\GraphicShader</Filter>
+    </ClCompile>
+    <ClCompile Include="CComputeShader.cpp">
+      <Filter>07. Asset\Shader\ComputeShader</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
