에셋은 이제 에셋메니저에서 관리
- 애셋타입을 가져올 때,  if constexpr 을 이용하여 컴파일타임에 타입체크를 한다

--- a/Project/Engine/Engine.vcxproj.filters
+++ b/Project/Engine/Engine.vcxproj.filters
@@ -158,6 +158,12 @@
     <ClInclude Include="CAssetMgr.h">
       <Filter>04. Manager\04.AssetMgr</Filter>
     </ClInclude>
+    <ClInclude Include="components.h">
+      <Filter>01. Header</Filter>
+    </ClInclude>
+    <ClInclude Include="assets.h">
+      <Filter>01. Header</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Engine.cpp">
